# rag_style_qa_app

./: README.md  pyproject.toml
.github/workflows/: hygene_tests.yaml
experiments/: experiment.ipynb
src/api/: .env.example  Dockerfile  README.md  pyproject.toml
src/api/app/: api.py  serve  wsgi.py
src/api/app/preprocessing/: api_logging.py  make_text.py  ner.py  parse_data.py
src/api/app/rag/: embedding_handling.py  model.py
src/api/app/rag/prompts/: question_answer.txt
src/api/app/schemas/: input_schemas.py
src/deployment/: README.md  build_and_push.sh
src/tests/performance/: README.md  conftest.py  test_params.yaml  test_qa.py  test_retrieval.py
src/tests/performance/test_cases/: question_answering.py
